# javinfo-api

./: .dockerignore  .env.sample  .gitignore  .gitpod.yml  Dockerfile  Dockerfile.build  Dockerfile.heroku  LICENSE  Pipfile  Procfile  README.md  SETUP.md  app.json  app.py  docker-compose.yml  heroku.yml  install.sh  main.py  mkdocs.yml  pyproject.toml  render.yaml  requirements.txt  self notes.todo  start.sh  test.html  versions.json
.devcontainer/: devcontainer.json
.github/workflows/: docker-build.yml  docker-dev.yml  docker-main.yml  docker-release.yml  docker.yml
api/: __init__.py  __main__.py
api/helper/: __init__.py  actress.py  color.bash  redis_log.py  string_filter.py  string_modify.py  timeout.py
api/html/: index.html
api/html/css/: base.css
api/resources/: __init__.py  javdatabase.py  javdb.py  javlibrary.py  r18.py
api/routers/: __init__.py  endpoints.py  redirects.py
api/scripts/: cron  javdb_login.py  ping.py  r18_db.py  redis_database_setup.py  startup
conf/: Caddyfile  build_requirements.txt  mkdocs.yml  redis.conf  release_requirements.txt  requirements.txt
docs/: demo.md  deploy.md  docs.md  index.md  version
docs/deploy/: docker.md  heroku.md  index.md  railway.md  render.md
latest/: 404.html  index.html
latest/demo/: index.html
latest/deploy/: index.html
latest/deploy/docker/: index.html
latest/guide/: index.html
src/: ___init__.py  __init__.py  app.py  javdatabase.py  javdb.py  javlibrary.py  r18.py
src/common/: _http.py  t.json  test.html  trailer.py
src/conf/: redis.conf
src/helper/: actress.py  healthcheck.py  javdb_login.py  mongo.py  r18_db.py  redis_log.py  string_modify.py  timeout.py
src/providers/: __init__.py  _javlibrary.py  boobpedia.py  javdatabase.py  javdb.py  javlibrary.py  r18.py  rss.py
src/root/: index.html
src/routes/: jav.py  non_jav.py  nsfw.py  rss.py
src/tests/: javdatabase.py  javlibrary.py  r18.py
src/wheels/: fastapi_limiter-0.1.5-py3-none-any.whl
v1/: 404.html  index.html  sitemap.xml  version
v1/demo/: index.html
v1/deploy/: index.html
v1/deploy/docker/: index.html
v1/guide/: index.html
v2/search/: search_index.json
(+20 files in other folders)
